[project]
name = "blogger_agents"
version = "0.1.0"
description = "blogger-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
blogger_agents = "blogger_agents.main:run"
run_crew = "blogger_agents.main:run"
train = "blogger_agents.main:train"
replay = "blogger_agents.main:replay"
test = "blogger_agents.main:test"
run_with_trigger = "blogger_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
